--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <!--Start of Container For Movie Posters-->
+    <!--Start of Container For Artist Image-->
     <div class="container">
         <h1 class="header"> This is a Spotify Sampler. 
             <br>Click an image to play a sample from the artist.</h1>
@@ -19,7 +19,7 @@
             </figure>
 
             <figure class="gallery__item gallery__item--2" id="fig2" onclick="event.stopPropagation(); getSong(this.id, event)">
-                <img class="gallery__img" src="images/jamie.jpg" alt="if anything's left">
+                <img class="gallery__img" src="images/jamie.jpg" alt="if anything's left jamie">
             </figure>
 
             <figure class="gallery__item gallery__item--3" id="fig3" onclick="event.stopPropagation(); getSong(this.id, event)">
@@ -27,7 +27,7 @@
             </figure>
 
             <figure class="gallery__item gallery__item--4" id="fig4" onclick="event.stopPropagation(); getSong(this.id, event)">
-                <img class="gallery__img" src="images/cian.jpeg" alt="i'll be waiting">
+                <img class="gallery__img" src="images/cian.jpeg" alt="i'll be waiting cian">
             </figure>
 
             <figure class="gallery__item gallery__item--5" id="fig5" onclick="event.stopPropagation(); getSong(this.id, event)">
